--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <!-- Logo -->
         <div class="logo">
-            <img src="/Users/rj/Documents/GitHub/TouchStone2024/Images/Logo.jpeg" alt="ABC Fitness Studios Logo" width="100" height="100">
+            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
         </div>
         
         <!-- Full-width Header Image -->
