--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <!-- Full-width Header Image -->
         <div class="header-image">
-            <img src="header-image.jpg" alt="Header Image">
+            <img src="Images/HeaderImg.jpg" alt="Header Image">
         </div>
 
         <!-- Navigation Menu -->
