--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <!-- Navigation Menu -->
-        <nav>
+        <nav class="bottom-nav">
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -30,43 +30,10 @@
     </header>
     
     <main>
-        <section class="hero">
-            <div class="hero-overlay">
-                <img src="hero-image.jpg" alt="Hero Image">
-                <div class="hero-text">
-                    <h2>Welcome to ABC Fitness Studios!</h2>
-                    <p>Explore our community and discover amazing content.</p>
-                    <a href="community.html" class="cta-button">Join Us</a>
-                </div>
-            </div>
-        </section>
-        <section class="featured">
-            <div class="about-preview">
-                <h3>About Us</h3>
-                <p>Learn more about our mission and vision.</p>
-                <a href="about.html">Read More</a>
-            </div>
-            <div class="gallery-preview">
-                <h3>Gallery</h3>
-                <p>Check out our latest images.</p>
-                <a href="gallery.html">View Gallery</a>
-            </div>
-            <div class="community-highlights">
-                <h3>Community</h3>
-                <p>See what our members are saying.</p>
-                <a href="community.html">Join Us</a>
-            </div>
-        </section>
+        <!-- Main Content -->
     </main>
     
     <footer>
-        <p>Contact us at: email@example.com</p>
-        <p>Follow us on social media!</p>
-        <div class="social-icons">
-            <a href="#"><img src="icon-facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="icon-instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="icon-twitter.png" alt="Twitter"></a>
-        </div>
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
 </body>
