--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <div class="logo">
             <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
         </div>
+
+        <!-- Website Title -->
+        <h1 class="site-title">ABC Fitness Studios</h1>
         
         <!-- Full-width Header Image -->
         <div class="header-image">
@@ -71,5 +74,6 @@
     </footer>
 </body>
 </html>
+
 
 
