--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>Contact us at: email@example.com</p>
         <p>Follow us on social media!</p>
         <div class="social-icons">
-            <a href="#"><img src="icon-facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook"></a>
             <a href="#"><img src="icon-instagram.png" alt="Instagram"></a>
             <a href="#"><img src="icon-twitter.png" alt="Twitter"></a>
         </div>
