--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <p>Follow us on social media!</p>
         <div class="social-icons">
             <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook"></a>
-            <a href="#"><img src="icon-instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="icon-twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram"></a>
+            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter"></a>
         </div>
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
