Updated Final Homescreen

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <!-- Navigation Menu -->
         <nav class="bottom-nav">
             <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="community.html">Community</a></li>
+                <li><a class="nav-button" href="index.html">Home</a></li>
+                <li><a class="nav-button" href="about.html">About Us</a></li>
+                <li><a class="nav-button" href="gallery.html">Gallery</a></li>
+                <li><a class="nav-button" href="community.html">Community</a></li>
             </ul>
         </nav>
     </header>
@@ -45,7 +45,7 @@
     </main>
     
     <footer>
-        <p>Contact us at: email@example.com</p>
+        <p>Contact us at: admin@abcfitnessstudios.com</p> <!-- Updated email -->
         <p>Follow us on social media!</p>
         <div class="social-icons">
             <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook"></a>
