--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="bottom-nav">
             <ul class="menu">
                 <li><a class="nav-button" href="index.html">Home</a></li>
-                <li><a class="nav-button" href="about.html">About Us</a></li>
+                <li><a class="nav-button" href="AboutUs.html">About Us</a></li> <!-- Updated link -->
                 <li><a class="nav-button" href="gallery.html">Gallery</a></li>
                 <li><a class="nav-button" href="community.html">Community</a></li>
             </ul>
@@ -40,7 +40,7 @@
                 In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.
             </p>
             <!-- Learn More Button -->
-            <a href="about.html" class="learn-more-button">Learn More</a>
+            <a href="AboutUs.html" class="learn-more-button">Learn More</a> <!-- Updated link -->
         </section>
     </main>
     
@@ -56,6 +56,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
