Updated about us

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Other page</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/page2.html" aria-current="page">Other page</a>
-    </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - ABC Fitness Studios</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <!-- Logo -->
+        <div class="logo">
+            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
+        </div>
+
+        <!-- Website Title -->
+        <h1 class="site-title">ABC Fitness Studios</h1>
+        
+        <!-- Full-width Header Image -->
+        <div class="header-image">
+            <img src="Images/HeaderImg.jpg" alt="Header Image">
+        </div>
+
+        <!-- Navigation Menu -->
+        <nav class="bottom-nav">
+            <ul class="menu">
+                <li><a class="nav-button" href="index.html">Home</a></li>
+                <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
+                <li><a class="nav-button" href="gallery.html">Gallery</a></li>
+                <li><a class="nav-button" href="community.html">Community</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <main>
-      <h1>My other page</h1>
+        <section class="about-us">
+            <h2>About Us!</h2> <!-- About Us heading -->
+        </section>
     </main>
-  </body>
+    
+    <footer>
+        <p>Contact us at: admin@abcfitnessstudios.com</p>
+        <p>Follow us on social media!</p>
+        <div class="social-icons">
+            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook"></a>
+            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram"></a>
+            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter"></a>
+        </div>
+        <p>&copy; 2024 ABC Fitness Studios</p>
+    </footer>
+</body>
 </html>
