--- a/index.html
+++ b/index.html
@@ -8,24 +8,17 @@
 </head>
 <body>
     <header>
-        <!-- Logo -->
         <div class="logo">
             <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
         </div>
-
-        <!-- Website Title -->
         <h1 class="site-title">ABC Fitness Studios</h1>
-        
-        <!-- Full-width Header Image -->
         <div class="header-image">
             <img src="Images/HeaderImg.jpg" alt="Header Image">
         </div>
-
-        <!-- Navigation Menu -->
         <nav class="bottom-nav">
             <ul class="menu">
                 <li><a class="nav-button" href="index.html">Home</a></li>
-                <li><a class="nav-button" href="AboutUs.html">About Us</a></li> <!-- Updated link -->
+                <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
                 <li><a class="nav-button" href="gallery.html">Gallery</a></li>
                 <li><a class="nav-button" href="community.html">Community</a></li>
             </ul>
@@ -33,19 +26,22 @@
     </header>
 
     <main>
-        <section class="summary">
-            <h2>About ABC Fitness Studios</h2>
+        <section class="content">
+            <h2>Welcome to ABC Fitness Studio!</h2>
             <p>
-                ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness. Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys. 
-                In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.
+                ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness.
             </p>
-            <!-- Learn More Button -->
-            <a href="AboutUs.html" class="learn-more-button">Learn More</a> <!-- Updated link -->
+            <p>
+                Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys. In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.
+            </p>
+            <div class="button-container">
+                <a class="nav-button" href="AboutUs.html">Learn More</a> <!-- Button to go to About Us -->
+            </div>
         </section>
     </main>
     
     <footer>
-        <p>Contact us at: admin@abcfitnessstudios.com</p> <!-- Updated email -->
+        <p>Contact us at: admin@abcfitnessstudios.com</p>
         <p>Follow us on social media!</p>
         <div class="social-icons">
             <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook"></a>
@@ -56,6 +52,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
