--- a/AboutUs.html
+++ b/AboutUs.html
@@ -8,20 +8,13 @@
 </head>
 <body>
     <header>
-        <!-- Logo -->
         <div class="logo">
             <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
         </div>
-
-        <!-- Website Title -->
         <h1 class="site-title">ABC Fitness Studios</h1>
-        
-        <!-- Full-width Header Image -->
         <div class="header-image">
             <img src="Images/HeaderImg.jpg" alt="Header Image">
         </div>
-
-        <!-- Navigation Menu -->
         <nav class="bottom-nav">
             <ul class="menu">
                 <li><a class="nav-button" href="index.html">Home</a></li>
@@ -34,7 +27,26 @@
 
     <main>
         <section class="about-us">
-            <h2>About Us!</h2> <!-- About Us heading -->
+            <div class="grid-container">
+                <div class="grid-item title">
+                    <h2>About Us!</h2>
+                </div>
+                <div class="grid-item">
+                    <p>ABC Fitness Studio is dedicated to creating a community where everyone can thrive. Our diverse range of classes ensures there is something for everyone, whether you're a beginner or a fitness enthusiast.</p>
+                </div>
+                <div class="grid-item">
+                    <p>Our experienced instructors provide guidance and support, helping members achieve their fitness goals in a positive and motivating environment.</p>
+                </div>
+                <div class="grid-item">
+                    <p>In addition to classes, we offer state-of-the-art equipment and resources for those looking to enhance their personal fitness journey.</p>
+                </div>
+                <div class="grid-item">
+                    <p>At ABC Fitness Studio, we believe in balance and well-being. Join us for a class today and start your journey towards a healthier lifestyle!</p>
+                </div>
+                <div class="grid-item">
+                    <p>Contact us to learn more about our offerings, schedule, and community events. We are excited to welcome you to our fitness family!</p>
+                </div>
+            </div>
         </section>
     </main>
     
@@ -50,3 +62,4 @@
     </footer>
 </body>
 </html>
+
