--- a/index.html
+++ b/index.html
@@ -26,16 +26,12 @@
     </header>
 
     <main>
-        <section class="content">
-            <h2>Welcome to ABC Fitness Studio!</h2>
-            <p>
-                ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness.
-            </p>
-            <p>
-                Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys. In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.
-            </p>
-            <div class="button-container">
-                <a class="nav-button" href="AboutUs.html">Learn More</a> <!-- Button to go to About Us -->
+        <section class="home-content">
+            <div class="body-text">
+                <h2>Welcome to ABC Fitness Studios!</h2>
+                <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness.</p>
+                <p>Explore our classes, meet our trainers, and join a community dedicated to your fitness journey!</p>
+                <a href="AboutUs.html" class="learn-more-button">Learn More</a>
             </div>
         </section>
     </main>
@@ -52,6 +48,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
