--- a/AboutUs.html
+++ b/AboutUs.html
@@ -32,14 +32,13 @@
                     <h2>About Us!</h2>
                 </div>
                 <div class="grid-item">
-                    <!-- Clear content in top left -->
+                    <!-- Empty for top left -->
                 </div>
                 <div class="grid-item">
-                    <!-- Clear content in top right -->
+                    <!-- Empty for top right -->
                 </div>
                 <div class="grid-item">
                     <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness. Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys. In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.</p>
-
                     <h3>Hours of Operation:</h3>
                     <p>Monday–Friday: 6 a.m. to 8 p.m.<br>
                        Saturday: 8 a.m. to 6 p.m.<br>
@@ -68,13 +67,14 @@
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <p>Follow us on social media!</p>
         <div class="social-icons">
-            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook"></a>
-            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram"></a>
-            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter"></a>
+            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram" class="social-icon"></a>
+            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter" class="social-icon"></a>
         </div>
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
 </body>
 </html>
+
 
 
