--- a/AboutUs.html
+++ b/AboutUs.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
-        </div>
-        <h1 class="site-title">ABC Fitness Studios</h1>
-        <div class="header-image">
-            <img src="Images/HeaderImg.jpg" alt="Header Image">
+        <div class="header-content">
+            <div class="logo">
+                <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
+            </div>
+            <h1 class="site-title">ABC Fitness Studios</h1>
+            <div class="header-image">
+                <img src="Images/HeaderImg.jpg" alt="Header Image">
+            </div>
         </div>
         <nav class="bottom-nav">
             <ul class="menu">
@@ -31,14 +33,8 @@
                 <div class="grid-item title">
                     <h2>About Us!</h2>
                 </div>
-                <div class="grid-item">
-                    <!-- Empty for top left -->
-                </div>
-                <div class="grid-item">
-                    <!-- Empty for top right -->
-                </div>
-                <div class="grid-item">
-                    <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness. Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys. In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.</p>
+                <div class="grid-item description">
+                    <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness.</p>
                     <h3>Hours of Operation:</h3>
                     <p>Monday–Friday: 6 a.m. to 8 p.m.<br>
                        Saturday: 8 a.m. to 6 p.m.<br>
@@ -75,6 +71,4 @@
     </footer>
 </body>
 </html>
-
-
 
