--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
-        </div>
-        <h1 class="site-title">ABC Fitness Studios</h1>
-        <div class="header-image">
-            <img src="Images/HeaderImg.jpg" alt="Header Image">
+        <div class="header-content">
+            <div class="logo">
+                <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
+            </div>
+            <h1 class="site-title">ABC Fitness Studios</h1>
+            <div class="header-image">
+                <img src="Images/HeaderImg.jpg" alt="Header Image">
+            </div>
         </div>
         <nav class="bottom-nav">
             <ul class="menu">
@@ -30,7 +32,6 @@
             <div class="body-text">
                 <h2>Welcome to ABC Fitness Studios!</h2>
                 <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness.</p>
-                <p>Explore our classes, meet our trainers, and join a community dedicated to your fitness journey!</p>
                 <a href="AboutUs.html" class="learn-more-button">Learn More</a>
             </div>
         </section>
@@ -40,14 +41,15 @@
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <p>Follow us on social media!</p>
         <div class="social-icons">
-            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook"></a>
-            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram"></a>
-            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter"></a>
+            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram" class="social-icon"></a>
+            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter" class="social-icon"></a>
         </div>
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
 </body>
 </html>
+
 
 
 
