--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - ABC Fitness Studios</title>
+    <title>ABC Fitness Studios</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <div class="logo">
-                <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
-            </div>
-            <h1 class="site-title">ABC Fitness Studios</h1>
-            <div class="header-image">
-                <img src="Images/HeaderImg.jpg" alt="Header Image">
-            </div>
+        <div class="logo">
+            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
+        </div>
+        <h1 class="site-title">ABC Fitness Studios</h1>
+        <div class="header-image">
+            <img src="Images/HeaderImg.jpg" alt="Header Image">
         </div>
         <nav class="bottom-nav">
             <ul class="menu">
@@ -23,23 +21,26 @@
                 <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
                 <li><a class="nav-button" href="gallery.html">Gallery</a></li>
                 <li><a class="nav-button" href="community.html">Community</a></li>
+                <li><a class="nav-button" href="store.html">Products/Classes</a></li>
             </ul>
+            <a href="cart.html" class="cart-icon">
+                <img src="Images/cart.png" alt="Cart" width="30" height="30">
+                <span class="cart-total">$0.00</span>
+            </a>
         </nav>
     </header>
 
     <main>
-        <section class="home-content">
-            <div class="body-text">
-                <h2>Welcome to ABC Fitness Studios!</h2>
-                <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness.</p>
-                <a href="AboutUs.html" class="learn-more-button">Learn More</a>
-            </div>
-        </section>
+        <div class="summary-text">
+            <p>
+                ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness. Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys.
+            </p>
+            <button onclick="location.href='AboutUs.html'" class="learn-more">Learn More</button>
+        </div>
     </main>
     
     <footer>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
-        <p>Follow us on social media!</p>
         <div class="social-icons">
             <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
             <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram" class="social-icon"></a>
@@ -47,8 +48,11 @@
         </div>
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
