--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             <ul class="menu">
                 <li><a class="nav-button" href="index.html">Home</a></li>
                 <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
-                <li><a class="nav-button" href="gallery.html">Gallery</a></li>
                 <li><a class="nav-button" href="community.html">Community</a></li>
-                <li><a class="nav-button" href="store.html">Products/Classes</a></li>
+                <li><a class="nav-button" href="/home/ChantelleB97/TouchStone1102/store.html">Products/Classes</a></li>
             </ul>
             <a href="cart.html" class="cart-icon">
                 <img src="Images/cart.png" alt="Cart" width="30" height="30">
@@ -52,12 +51,3 @@
     <script src="scripts.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
