--- a/AboutUs.html
+++ b/AboutUs.html
@@ -8,7 +8,25 @@
 </head>
 <body>
     <header>
-        <!-- Header content is the same as the homepage header -->
+        <div class="logo">
+            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
+        </div>
+        <h1 class="site-title">ABC Fitness Studios</h1>
+        <div class="header-image">
+            <img src="Images/HeaderImg.jpg" alt="Header Image">
+        </div>
+        <nav class="bottom-nav">
+            <ul class="menu">
+                <li><a class="nav-button" href="index.html">Home</a></li>
+                <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
+                <li><a class="nav-button" href="community.html">Community</a></li>
+                <li><a class="nav-button" href="/home/ChantelleB97/TouchStone1102/store.html">Products/Classes</a></li>
+            </ul>
+            <a href="cart.html" class="cart-icon">
+                <img src="Images/cart.png" alt="Cart" width="30" height="30">
+                <span class="cart-total">$0.00</span>
+            </a>
+        </nav>
     </header>
 
     <main>
@@ -39,9 +57,15 @@
     </main>
     
     <footer>
-        <!-- Footer content is the same as the homepage footer -->
+        <p>Contact us at: admin@abcfitnessstudios.com</p>
+        <div class="social-icons">
+            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram" class="social-icon"></a>
+            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter" class="social-icon"></a>
+        </div>
+        <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
-
-
