--- a/store.html
+++ b/store.html
@@ -8,7 +8,25 @@
 </head>
 <body>
     <header>
-        <!-- Header content is the same as the homepage header -->
+        <div class="logo">
+            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
+        </div>
+        <h1 class="site-title">ABC Fitness Studios</h1>
+        <div class="header-image">
+            <img src="Images/HeaderImg.jpg" alt="Header Image">
+        </div>
+        <nav class="bottom-nav">
+            <ul class="menu">
+                <li><a class="nav-button" href="index.html">Home</a></li>
+                <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
+                <li><a class="nav-button" href="community.html">Community</a></li>
+                <li><a class="nav-button" href="/home/ChantelleB97/TouchStone1102/store.html">Products/Classes</a></li>
+            </ul>
+            <a href="cart.html" class="cart-icon">
+                <img src="Images/cart.png" alt="Cart" width="30" height="30">
+                <span class="cart-total">$0.00</span>
+            </a>
+        </nav>
     </header>
 
     <main>
@@ -19,13 +37,58 @@
                     <p>Product 1 - $10.00</p>
                     <button onclick="addToCart(10)">Add to Cart</button>
                 </div>
-                <!-- Repeat for other products (product2.jpg - product9.jpg) -->
+                <div class="grid-item">
+                    <img src="Images/product2.jpg" alt="Product 2" class="product-image">
+                    <p>Product 2 - $15.00</p>
+                    <button onclick="addToCart(15)">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/product3.jpg" alt="Product 3" class="product-image">
+                    <p>Product 3 - $20.00</p>
+                    <button onclick="addToCart(20)">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/product4.jpg" alt="Product 4" class="product-image">
+                    <p>Product 4 - $25.00</p>
+                    <button onclick="addToCart(25)">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/product5.jpg" alt="Product 5" class="product-image">
+                    <p>Product 5 - $30.00</p>
+                    <button onclick="addToCart(30)">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/product6.jpg" alt="Product 6" class="product-image">
+                    <p>Product 6 - $35.00</p>
+                    <button onclick="addToCart(35)">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/product7.jpg" alt="Product 7" class="product-image">
+                    <p>Product 7 - $40.00</p>
+                    <button onclick="addToCart(40)">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/product8.jpg" alt="Product 8" class="product-image">
+                    <p>Product 8 - $45.00</p>
+                    <button onclick="addToCart(45)">Add to Cart</button>
+                </div>
+                <div class="grid-item">
+                    <img src="Images/product9.jpg" alt="Product 9" class="product-image">
+                    <p>Product 9 - $50.00</p>
+                    <button onclick="addToCart(50)">Add to Cart</button>
+                </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <!-- Footer content is the same as the homepage footer -->
+        <p>Contact us at: admin@abcfitnessstudios.com</p>
+        <div class="social-icons">
+            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram" class="social-icon"></a>
+            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter" class="social-icon"></a>
+        </div>
+        <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
 
     <script src="scripts.js"></script>
