--- a/index.html
+++ b/index.html
@@ -8,36 +8,31 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
-        </div>
-        <h1 class="site-title">ABC Fitness Studios</h1>
         <div class="header-image">
             <img src="Images/HeaderImg.jpg" alt="Header Image">
         </div>
-        <nav class="bottom-nav">
+        <img src="Images/logo.jpg" alt="Logo" class="logo">
+        <h1 class="site-title">ABC Fitness Studios</h1>
+        <nav>
             <ul class="menu">
                 <li><a class="nav-button" href="index.html">Home</a></li>
                 <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
-                <li><a class="nav-button" href="community.html">Community</a></li>
-                <li><a class="nav-button" href="/home/ChantelleB97/TouchStone1102/store.html">Products/Classes</a></li>
+                <li><a class="nav-button" href="store.html">Products/Classes</a></li>
             </ul>
-            <a href="cart.html" class="cart-icon">
-                <img src="Images/cart.png" alt="Cart" width="30" height="30">
+            <div class="cart-icon">
+                <span>🛒</span>
                 <span class="cart-total">$0.00</span>
-            </a>
+            </div>
         </nav>
     </header>
 
     <main>
         <div class="summary-text">
-            <p>
-                ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness. Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys.
-            </p>
-            <button onclick="location.href='AboutUs.html'" class="learn-more">Learn More</button>
+            <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness. Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys. In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.</p>
+            <button class="learn-more" onclick="location.href='AboutUs.html'">Learn More</button>
         </div>
     </main>
-    
+
     <footer>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
