--- a/store.html
+++ b/store.html
@@ -3,29 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop - ABC Fitness Studios</title>
+    <title>Store - ABC Fitness Studios</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="Images/logo.jpg" alt="ABC Fitness Studios Logo" width="100" height="100">
-        </div>
-        <h1 class="site-title">ABC Fitness Studios</h1>
         <div class="header-image">
             <img src="Images/HeaderImg.jpg" alt="Header Image">
         </div>
-        <nav class="bottom-nav">
+        <img src="Images/logo.jpg" alt="Logo" class="logo">
+        <h1 class="site-title">ABC Fitness Studios</h1>
+        <nav>
             <ul class="menu">
                 <li><a class="nav-button" href="index.html">Home</a></li>
                 <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
-                <li><a class="nav-button" href="community.html">Community</a></li>
-                <li><a class="nav-button" href="/home/ChantelleB97/TouchStone1102/store.html">Products/Classes</a></li>
+                <li><a class="nav-button" href="store.html">Products/Classes</a></li>
             </ul>
-            <a href="cart.html" class="cart-icon">
-                <img src="Images/cart.png" alt="Cart" width="30" height="30">
+            <div class="cart-icon">
+                <span>🛒</span>
                 <span class="cart-total">$0.00</span>
-            </a>
+            </div>
         </nav>
     </header>
 
