--- a/store.html
+++ b/store.html
@@ -10,39 +10,40 @@
     <header>
         <div class="header-image">
             <img src="Images/HeaderImg.jpg" alt="Header Image">
+            <h1 class="site-title">ABC Fitness Studios</h1>
+            <img src="Images/logo.jpg" alt="Logo" class="logo">
         </div>
-        <img src="Images/logo.jpg" alt="Logo" class="logo">
-        <h1 class="site-title">ABC Fitness Studios</h1>
         <nav>
             <ul class="menu">
-                <li><a class="nav-button" href="index.html">Home</a></li>
-                <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
-                <li><a class="nav-button" href="store.html">Products/Classes</a></li>
+                <li><a href="index.html" class="nav-button">Home</a></li>
+                <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
+                <li><a href="/home/ChantelleB97/TouchStone1102/store.html" class="nav-button">Products/Classes</a></li>
+                <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
             <div class="cart-icon">
-                <span>🛒</span>
                 <span class="cart-total">$0.00</span>
             </div>
         </nav>
     </header>
 
     <main>
-        <section class="product-grid">
+        <section>
+            <h2>Our Products</h2>
             <div class="grid-container">
                 <div class="grid-item">
                     <img src="Images/product1.jpg" alt="Product 1" class="product-image">
-                    <p>Product 1 - $10.00</p>
-                    <button onclick="addToCart(10)">Add to Cart</button>
+                    <p>Product 1 - $20.00</p>
+                    <button onclick="addToCart(20)">Add to Cart</button>
                 </div>
                 <div class="grid-item">
                     <img src="Images/product2.jpg" alt="Product 2" class="product-image">
-                    <p>Product 2 - $15.00</p>
-                    <button onclick="addToCart(15)">Add to Cart</button>
+                    <p>Product 2 - $25.00</p>
+                    <button onclick="addToCart(25)">Add to Cart</button>
                 </div>
                 <div class="grid-item">
                     <img src="Images/product3.jpg" alt="Product 3" class="product-image">
-                    <p>Product 3 - $20.00</p>
-                    <button onclick="addToCart(20)">Add to Cart</button>
+                    <p>Product 3 - $30.00</p>
+                    <button onclick="addToCart(30)">Add to Cart</button>
                 </div>
                 <div class="grid-item">
                     <img src="Images/product4.jpg" alt="Product 4" class="product-image">
