--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,17 +10,17 @@
     <header>
         <div class="header-image">
             <img src="Images/HeaderImg.jpg" alt="Header Image">
+            <h1 class="site-title">ABC Fitness Studios</h1>
+            <img src="Images/logo.jpg" alt="Logo" class="logo">
         </div>
-        <img src="Images/logo.jpg" alt="Logo" class="logo">
-        <h1 class="site-title">ABC Fitness Studios</h1>
         <nav>
             <ul class="menu">
-                <li><a class="nav-button" href="index.html">Home</a></li>
-                <li><a class="nav-button" href="AboutUs.html">About Us</a></li>
-                <li><a class="nav-button" href="store.html">Products/Classes</a></li>
+                <li><a href="index.html" class="nav-button">Home</a></li>
+                <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
+                <li><a href="/home/ChantelleB97/TouchStone1102/store.html" class="nav-button">Products/Classes</a></li>
+                <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
             <div class="cart-icon">
-                <span>🛒</span>
                 <span class="cart-total">$0.00</span>
             </div>
         </nav>
@@ -28,16 +28,34 @@
 
     <main>
         <div class="grid-layout">
-            <div class="grid-item top-center">
-                <h2>About Us!</h2>
+            <div class="top-center">
+                <h1>About Us!</h1>
             </div>
-            <div class="grid-item bottom-left">
-                <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness. Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys. In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.</p>
-                <h3>Hours of Operation:</h3>
-                <p>Monday–Friday: 6 a.m. to 8 p.m.<br>Saturday: 8 a.m. to 6 p.m.<br>Sunday: Closed</p>
+            <div class="grid-item">
+                <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba.</p>
             </div>
-            <div class="grid-item bottom-right">
-                <!-- Contact form can be placed here if needed -->
+            <div class="grid-item">
+                <p>Our goal is to provide a welcoming space for physical and mental wellness.</p>
+            </div>
+            <div class="grid-item">
+                <p>Contact us for inquiries about classes and bookings!</p>
+            </div>
+            <div class="grid-item">
+                <p>Hours of Operation:</p>
+                <p>Monday–Friday: 6 a.m. to 8 p.m.</p>
+                <p>Saturday: 8 a.m. to 6 p.m.</p>
+                <p>Sunday: Closed</p>
+            </div>
+            <div class="grid-item">
+                <form action="#">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+                    <button type="submit">Send</button>
+                </form>
             </div>
         </div>
     </main>
