--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ABC Fitness Studio offers diverse fitness classes including yoga, Pilates, and Zumba.">
+    <meta name="keywords" content="fitness, yoga, Pilates, Zumba, health, classes">
+    <meta name="author" content="ABC Fitness Studios">
     <title>ABC Fitness Studios</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header role="banner">
         <div class="header-image">
-            <img src="Images/HeaderImg.jpg" alt="Header Image">
+            <img src="Images/HeaderImg.webp" alt="Header Image">
             <h1 class="site-title">ABC Fitness Studios</h1>
-            <img src="Images/logo.jpg" alt="Logo" class="logo">
+            <img src="Images/logo.webp" alt="Logo" class="logo">
         </div>
-        <nav>
+        <nav role="navigation" aria-label="Main navigation">
             <ul class="menu">
                 <li><a href="index.html" class="nav-button">Home</a></li>
                 <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
                 <li><a href="store.html" class="nav-button">Products/Classes</a></li>
                 <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
-            <div class="cart-icon">
+            <div class="cart-icon" aria-live="polite">
                 <span class="cart-total">$0.00</span>
             </div>
         </nav>
@@ -36,9 +39,9 @@
     <footer>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
-            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
-            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram" class="social-icon"></a>
-            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter" class="social-icon"></a>
+            <a href="#"><img src="Images/facebooklogo.webp" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="Images/Instagramlogo.webp" alt="Instagram" class="social-icon"></a>
+            <a href="#"><img src="Images/Twitterlogo.webp" alt="Twitter" class="social-icon"></a>
         </div>
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
