--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 <body>
     <header role="banner">
         <div class="header-image">
-            <img src="Images/HeaderImg.webp" alt="Header Image">
+            <img src="Images/HeaderImg.jpg" alt="Header Image">
             <h1 class="site-title">ABC Fitness Studios</h1>
-            <img src="Images/logo.webp" alt="Logo" class="logo">
+            <img src="Images/logo.jpg" alt="Logo" class="logo">
         </div>
         <nav role="navigation" aria-label="Main navigation">
             <ul class="menu">
