--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <footer>
         <p>Contact us at: admin@abcfitnessstudios.com</p>
         <div class="social-icons">
-            <a href="#"><img src="Images/facebooklogo.webp" alt="Facebook" class="social-icon"></a>
-            <a href="#"><img src="Images/Instagramlogo.webp" alt="Instagram" class="social-icon"></a>
-            <a href="#"><img src="Images/Twitterlogo.webp" alt="Twitter" class="social-icon"></a>
+            <a href="#"><img src="Images/facebooklogo.jpg" alt="Facebook" class="social-icon"></a>
+            <a href="#"><img src="Images/Instagramlogo.jpg" alt="Instagram" class="social-icon"></a>
+            <a href="#"><img src="Images/Twitterlogo.jpg" alt="Twitter" class="social-icon"></a>
         </div>
         <p>&copy; 2024 ABC Fitness Studios</p>
     </footer>
