--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             font-size: 2em;
             text-shadow: 2px 2px 4px #000;
         }
+        .social-icons img {
+            width: 30px; /* Adjust size as needed */
+            height: auto;
+        }
     </style>
 </head>
 <body>
