--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,60 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - ABC Fitness Studios</title>
+    <meta name="description" content="ABC Fitness Studio offers diverse fitness classes including yoga, Pilates, and Zumba.">
+    <meta name="keywords" content="fitness, yoga, Pilates, Zumba, health, classes">
+    <meta name="author" content="ABC Fitness Studios">
+    <title>ABC Fitness Studios</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .header-image {
+            position: relative;
+            width: 100%;
+            height: 50vh; /* Half the size of the body */
+            overflow: hidden;
+        }
+        .header-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .header-image .logo {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 100px; /* Adjust size as needed */
+            height: auto;
+        }
+        .header-image .site-title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 2em;
+            text-shadow: 2px 2px 4px #000;
+        }
+        .social-icons img {
+            width: 30px; /* Adjust size as needed */
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <header>
+    <header role="banner">
         <div class="header-image">
             <img src="Images/HeaderImg.jpg" alt="Header Image">
             <h1 class="site-title">ABC Fitness Studios</h1>
             <img src="Images/logo.jpg" alt="Logo" class="logo">
         </div>
-        <nav>
+        <nav role="navigation" aria-label="Main navigation">
             <ul class="menu">
                 <li><a href="index.html" class="nav-button">Home</a></li>
                 <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
-                <li><a href="/home/ChantelleB97/TouchStone1102/store.html" class="nav-button">Products/Classes</a></li>
+                <li><a href="store.html" class="nav-button">Products/Classes</a></li>
                 <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
-            <div class="cart-icon">
+            <div class="cart-icon" aria-live="polite">
                 <span class="cart-total">$0.00</span>
             </div>
         </nav>
     </header>
 
     <main>
-        <div class="grid-layout">
-            <div class="top-center">
-                <h1>About Us!</h1>
-            </div>
-            <div class="grid-item">
-                <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba.</p>
-            </div>
-            <div class="grid-item">
-                <p>Our goal is to provide a welcoming space for physical and mental wellness.</p>
-            </div>
-            <div class="grid-item">
-                <p>Contact us for inquiries about classes and bookings!</p>
-            </div>
-            <div class="grid-item">
-                <p>Hours of Operation:</p>
-                <p>Monday–Friday: 6 a.m. to 8 p.m.</p>
-                <p>Saturday: 8 a.m. to 6 p.m.</p>
-                <p>Sunday: Closed</p>
-            </div>
-            <div class="grid-item">
-                <form action="#">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" required></textarea>
-                    <button type="submit">Send</button>
-                </form>
-            </div>
+        <div class="summary-text">
+            <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle.</p>
+            <button class="learn-more" onclick="window.location.href='AboutUs.html'">Learn More</button>
         </div>
     </main>
 
