--- a/store.html
+++ b/store.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Store - ABC Fitness Studios</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .header-image {
+            position: relative;
+            width: 100%;
+            height: 50vh; /* Half the size of the body */
+            overflow: hidden;
+        }
+        .header-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .header-image .logo {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 100px; /* Adjust size as needed */
+            height: auto;
+        }
+        .header-image .site-title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 2em;
+            text-shadow: 2px 2px 4px #000;
+        }
+        .social-icons img {
+            width: 30px; /* Adjust size as needed */
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -17,7 +50,7 @@
             <ul class="menu">
                 <li><a href="index.html" class="nav-button">Home</a></li>
                 <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
-                <li><a href="/home/ChantelleB97/TouchStone1102/store.html" class="nav-button">Products/Classes</a></li>
+                <li><a href="store.html" class="nav-button">Products/Classes</a></li>
                 <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
             <div class="cart-icon">
