--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             width: 30px; /* Adjust size as needed */
             height: auto;
         }
+        .summary-text {
+            text-align: center;
+            margin: 0 auto;
+            width: 50%; /* Adjust as needed */
+        }
     </style>
 </head>
 <body>
