--- a/AboutUs.html
+++ b/AboutUs.html
@@ -40,6 +40,20 @@
             width: 30px; /* Adjust size as needed */
             height: auto;
         }
+        .grid-layout {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            padding: 20px;
+        }
+        .grid-item {
+            padding: 20px;
+            border: 1px solid #ccc;
+        }
+        .top-center {
+            grid-column: span 3;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -63,9 +77,30 @@
     </header>
 
     <main>
-        <div class="summary-text">
-            <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle.</p>
-            <button class="learn-more" onclick="window.location.href='AboutUs.html'">Learn More</button>
+        <div class="grid-layout">
+            <div class="top-center">
+                <h1>About Us!</h1>
+            </div>
+            <div class="grid-item">
+                <p>ABC Fitness Studio is a local fitness haven specializing in a diverse range of classes, including yoga, Pilates, and Zumba, all geared toward promoting a healthy and active lifestyle. With a commitment to well-being, it aims to provide its community with a welcoming space for physical and mental wellness. Additionally, it offers a selection of high-quality fitness and training equipment to support its clients’ fitness journeys. In the absence of an online presence, it aspires to create a website that embodies its values of balance, harmony, and active living. Its target audience comprises local individuals seeking fitness and holistic health solutions, and its primary goal is to enhance visibility; foster community connections; and facilitate class inquiries, bookings, and equipment purchases.</p>
+            </div>
+            <div class="grid-item">
+                <p>Hours of Operation:</p>
+                <p>Monday–Friday: 6 a.m. to 8 p.m.</p>
+                <p>Saturday: 8 a.m. to 6 p.m.</p>
+                <p>Sunday: Closed</p>
+            </div>
+            <div class="grid-item">
+                <form action="#">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+                    <button type="submit">Send</button>
+                </form>
+            </div>
         </div>
     </main>
 
