--- a/store.html
+++ b/store.html
@@ -37,23 +37,35 @@
             width: 30px; /* Adjust size as needed */
             height: auto;
         }
+        #cart-view {
+            position: fixed;
+            right: 20px;
+            top: 20px;
+            width: 300px;
+            background: white;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            z-index: 1000;
+            display: none;
+        }
     </style>
 </head>
 <body>
-    <header>
+    <header role="banner">
         <div class="header-image">
             <img src="Images/HeaderImg.jpg" alt="Header Image">
             <h1 class="site-title">ABC Fitness Studios</h1>
             <img src="Images/logo.jpg" alt="Logo" class="logo">
         </div>
-        <nav>
+        <nav role="navigation" aria-label="Main navigation">
             <ul class="menu">
                 <li><a href="index.html" class="nav-button">Home</a></li>
                 <li><a href="AboutUs.html" class="nav-button">About Us</a></li>
                 <li><a href="store.html" class="nav-button">Products/Classes</a></li>
                 <li><a href="ContactUs.html" class="nav-button">Contact Us</a></li>
             </ul>
-            <div class="cart-icon" onclick="toggleCartView()">
+            <div class="cart-icon" aria-live="polite" onclick="toggleCartView()">
                 <img src="Images/cart-icon.png" alt="Cart Icon">
                 <span class="cart-total">$0.00</span>
             </div>
